fix(multiplatform): adjust ChooseShare styles and update assets
> This gap seems too large - perhaps the picture needs to be adjusted somehow?

https://www.figma.com/design/zctILurzM32OmUgLay5RpZ/KMP-landing-page-%7C-Kotlinlang-%7C-DSGN-24366?node-id=371-16726&m=dev

--- a/blocks/multiplatform/choose-share/blocks/what/choose-share-what.module.css
+++ b/blocks/multiplatform/choose-share/blocks/what/choose-share-what.module.css
@@ -90,14 +90,6 @@
     @media (--ktl-ml-more) {
         border-radius: 24px;
     }
-
-    @media (--ktl-ds-more) {
-        min-height: 568px;
-    }
-
-    @media (--ktl-ds-in) {
-        min-height: 484px;
-    }
 }
 
 :global(.js) .card:not(.active) {
